Load responsive images using srcset

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         data-ride="carousel">
             <div class="carousel-inner">
                 <div class="active item">
-                    <img src="images/2014_inca_trail.jpg">
+                    <img src="images/2014_inca_trail_640.jpg"
+                         srcset="images/2014_inca_trail_320.jpg 320w,
+                                 images/2014_inca_trail_640.jpg 640w,
+                                 images/2014_inca_trail_800.jpg 800w,
+                                 images/2014_inca_trail_1024.jpg 1024w,
+                                 images/2014_inca_trail_1280.jpg 1280w,
+                                 images/2014_inca_trail_3264.jpg 3264w"
+                         sizes="100vw"
+                         alt="On the Inca Trail to Machu Picchu in Peru" />
                     <div class="carousel-caption">
                         <h2 class="text-inverse">Julian V. Modesto</h2>
                         <p>New York, NY</p>
