--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <br>
                         <br>I like traveling, long reads, puns, and unnecessary acronyms.
                         <br>
-                        <br>Follow me and <a href="blog">visit my blog</a>.
+                        <br>Follow me and <a href="https://medium.com/@julianvmodesto">visit my blog</a>.
                         <br>
                         <br>
                         <a href="mailto:holler@julianvmodesto.com">holler@julianvmodesto.com</a>
