Add more social

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Julian V. Modesto</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" async></script>
-    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" async></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="theme.css">
+    <link href="theme.css" rel="stylesheet" type='text/css'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
@@ -54,6 +52,7 @@
             </div>
         </div>
     </div>
+
     <div class="section">
         <div class="container">
             <div class="row text-center">
@@ -72,6 +71,7 @@
             </div>
         </div>
     </div>
+
     <div class="section">
         <div class="container">
             <div class="row text-center">
@@ -85,14 +85,36 @@
                     <a href="https://plus.google.com/+JulianModesto"><i class="fa fa-5x fa-fw text-info fa-google-plus"></i></a>
                 </div>
                 <div class="col-xs-3 text-center">
-                    <a href="https://www.facebook.com/julian.modesto"><i class="fa fa-5x fa-facebook-f fa-fw hub text-info"></i></a>
+                    <a href="https://www.facebook.com/julianvmodesto"><i class="fa fa-5x fa-facebook-f fa-fw hub text-info"></i></a>
                 </div>
             </div>
         </div>
     </div>
-</body>
 
-<footer>
-</footer>
+    <div class="section">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-xs-3 text-center">
+                    <a href="https://open.spotify.com/user/em37ib"><i class="fa fa-5x fa-fw fa-spotify text-info"></i></a>
+                </div>
+                <div class="col-xs-3">
+                    <a href="http://www.last.fm/user/jave8u"><i class="fa fa-5x fa-fw fa-lastfm-square text-info"></i></a>
+                </div>
+                <div class="col-xs-3">
+                    <a href="https://getpocket.com/@jave"><i class="fa fa-5x fa-fw fa-get-pocket text-info"></i></a>
+                </div>
+                <div class="col-xs-3 text-center">
+                    <a href="https://www.goodreads.com/julianvmodesto"><i class="fa fa-5x fa-fw fa-book text-info"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" async></script>
+        <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" async></script>
+    </footer>
+
+</body>
 
 </html>
