--- a/static/index.html
+++ b/static/index.html
@@ -1,120 +1,56 @@
-<!DOCTYPE html>
-<html lang=en>
+<html>
+  <head>
+  </head>
+  <body>
+    <main>
+      <section>
+        Hi, I'm Julian
+        <ul>
+          <li><a href="https://twitter.com/julianvmodesto">twitter</a></li>
+          <li><a href="https://github.com/julianvmodesto">github</a></li>
+          <li><a href="https://instagram.com/julianvmodesto/">instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/julianvmodesto">linkedin</a></li>
+          <li><a href="https://medium.com/@julianvmodesto">medium</a></li>
+          <li><a href="https://www.facebook.com/julianvmodesto">facebook</a></li>
+          <li><a href="https://open.spotify.com/user/em37ib">spotify</a></li>
+          <li><a href="http://www.last.fm/user/jave8u">last.fm</a></li>
+          <li><a href="https://getpocket.com/@jave">pocket</a></li>
+          <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
+        </ul>
+      </section>
+    </main>
+  </body>
+  <footer>
+    <style>
+      html,
+      body {
+        height: 100%;
+      }
 
-<head>
-    <meta name="keywords" content="julian,victor,modesto">
-    <meta name="description" content="Julian V. Modesto">
-    <title>Julian V. Modesto</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="theme.css" rel="stylesheet" type='text/css'>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-</head>
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font: Georgia, serif;
+      }
 
-<body>
-    <div id="fullcarousel-example" data-interval="false" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="active item">
-                <img src="images/2014_inca_trail_640.jpg" srcset="images/2014_inca_trail_320.jpg 320w,
-                                 images/2014_inca_trail_640.jpg 640w,
-                                 images/2014_inca_trail_800.jpg 800w,
-                                 images/2014_inca_trail_1024.jpg 1024w,
-                                 images/2014_inca_trail_1280.jpg 1280w,
-                                 images/2014_inca_trail_3264.jpg 3264w" sizes="100vw" alt="On the Inca Trail to Machu Picchu in Peru" />
-                <div class="carousel-caption">
-                    <h2 class="text-inverse">Julian V. Modesto</h2>
-                    <p>New York, NY</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="page-header">
-                        <h1>Julian V. Modesto&nbsp;
-                                <small>New York, NY</small>
-                            </h1>
-                    </div>
-                    <p>I'm a 2014 new grad from Rutgers University in New Jersey with my BS in Computer Science and Biomedical Engineering. Since graduating, I've transplanted not-too-far to New York, NY.
-                        <br>
-                        <br>I like traveling, long reads, puns, and unnecessary acronyms.
-                        <br>
-                        <br>Follow me and <a href="https://medium.com/@julianvmodesto">visit my blog</a>.
-                        <br>
-                        <br>
-                        <a href="mailto:holler@julianvmodesto.com">holler@julianvmodesto.com</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+      main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2em;
+      }
 
-    <div class="section">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-3 text-center">
-                    <a href="https://medium.com/@julianvmodesto"><i class="fa fa-5x fa-fw text-info fa-medium"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="https://twitter.com/julianvmodesto"><i class="fa fa-5x fa-fw fa-twitter text-info"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="https://www.linkedin.com/in/julianvmodesto"><i class="fa fa-5x fa-fw text-info edin fa-linkedin-square"></i></a>
-                </div>
-                <div class="col-xs-3 text-center">
-                    <a href="https://github.com/julianvmodesto"><i class="fa fa-5x fa-fw fa-github text-info"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
+      ul {
+        list-style: none;
+        margin-top: 0.5em;
+        margin: 0;
+        padding: 0;
+      }
 
-    <div class="section">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-3 text-center">
-                    <a href="https://instagram.com/julianvmodesto/"><i class="fa fa-5x fa-fw fa-instagram text-info"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="http://julianvmodesto.tumblr.com/"><i class="fa fa-5x fa-fw text-info -square fa-tumblr-square"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="https://plus.google.com/+JulianModesto"><i class="fa fa-5x fa-fw text-info fa-google-plus"></i></a>
-                </div>
-                <div class="col-xs-3 text-center">
-                    <a href="https://www.facebook.com/julianvmodesto"><i class="fa fa-5x fa-facebook-f fa-fw hub text-info"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-xs-3 text-center">
-                    <a href="https://open.spotify.com/user/em37ib"><i class="fa fa-5x fa-fw fa-spotify text-info"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="http://www.last.fm/user/jave8u"><i class="fa fa-5x fa-fw fa-lastfm-square text-info"></i></a>
-                </div>
-                <div class="col-xs-3">
-                    <a href="https://getpocket.com/@jave"><i class="fa fa-5x fa-fw fa-get-pocket text-info"></i></a>
-                </div>
-                <div class="col-xs-3 text-center">
-                    <a href="https://www.goodreads.com/julianvmodesto"><i class="fa fa-5x fa-fw fa-book text-info"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" async></script>
-        <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" async></script>
-    </footer>
-
-</body>
-
+      li {
+        margin: 0.25em 0;
+      }
+    </style>
+  </footer>
 </html>
