--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
           <li><a href="http://www.last.fm/user/jave8u">last.fm</a></li>
           <li><a href="https://getpocket.com/@jave">pocket</a></li>
           <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
+          <li><a href="mailto:holler@julianvmodesto.com">email</a></li>
         </ul>
       </section>
     </main>
