--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en-US" >
   <head>
+    <title>Julian V. Modesto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main>
@@ -26,6 +28,7 @@
       html,
       body {
         height: 100%;
+        width: 100%
       }
 
       body {
