Update Pocket link

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
           <li><a href="https://www.facebook.com/julianvmodesto">facebook</a></li>
           <li><a href="https://open.spotify.com/user/em37ib">spotify</a></li>
           <li><a href="http://www.last.fm/user/jave8u">last.fm</a></li>
-          <li><a href="https://getpocket.com/@jave">pocket</a></li>
+          <li><a href="https://getpocket.com/@julianvmodesto">pocket</a></li>
           <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
           <li><a href="mailto:holler@julianvmodesto.com">email</a></li>
         </ul>
