--- a/static/index.html
+++ b/static/index.html
@@ -10,11 +10,13 @@
         <ul>
           <li><a href="https://twitter.com/julianvmodesto">twitter</a></li>
           <li><a href="https://github.com/julianvmodesto">github</a></li>
+          <li><a href="http://stackoverflow.com/users/1881379/julian-v-modesto">stackoverflow</a></li>
           <li><a href="https://instagram.com/julianvmodesto/">instagram</a></li>
           <li><a href="https://www.linkedin.com/in/julianvmodesto">linkedin</a></li>
           <li><a href="https://medium.com/@julianvmodesto">medium</a></li>
           <li><a href="https://www.facebook.com/julianvmodesto">facebook</a></li>
           <li><a href="https://open.spotify.com/user/em37ib">spotify</a></li>
+          <li><a href="https://www.yelp.com/user_details?userid=vDedhjOr4XJeVTVZbdy_RQ">yelp</a></li>
           <li><a href="http://www.last.fm/user/jave8u">last.fm</a></li>
           <li><a href="https://getpocket.com/@julianvmodesto">pocket</a></li>
           <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
