--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html lang="en-US" >
   <head>
     <title>Julian V. Modesto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Julian V. Modesto personal website">
   </head>
   <body>
     <main>
