Update stackoverflow link

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="https://twitter.com/julianvmodesto">twitter</a></li>
           <li><a href="https://github.com/julianvmodesto">github</a></li>
-          <li><a href="http://stackoverflow.com/users/1881379/julian-v-modesto">stackoverflow</a></li>
+          <li><a href="https://stackoverflow.com/story/julianvmodesto">stackoverflow</a></li>
           <li><a href="https://instagram.com/julianvmodesto/">instagram</a></li>
           <li><a href="https://www.linkedin.com/in/julianvmodesto">linkedin</a></li>
           <li><a href="https://medium.com/@julianvmodesto">medium</a></li>
