--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,17 @@
 <html lang="en-US" >
   <head>
     <title>Julian V. Modesto</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Julian V. Modesto personal website">
+    <meta name="description" content="Julian V. Modesto personal website"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="keywords" content="julianvmodesto"/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="language" content="English"/>
   </head>
   <body>
     <main>
       <section>
-        Hi, I'm Julian
+        hi, I'm Julian
         <ul>
           <li><a href="https://twitter.com/julianvmodesto">twitter</a></li>
           <li><a href="https://github.com/julianvmodesto">github</a></li>
