--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <section>
-        hi, I'm Julian
+        hi, i'm julian
         <ul>
           <li><a href="https://twitter.com/julianvmodesto">twitter</a></li>
           <li><a href="https://github.com/julianvmodesto">github</a></li>
@@ -23,7 +23,7 @@
           <li><a href="https://www.facebook.com/julianvmodesto">facebook</a></li>
           <li><a href="https://open.spotify.com/user/em37ib">spotify</a></li>
           <li><a href="https://www.yelp.com/user_details?userid=vDedhjOr4XJeVTVZbdy_RQ">yelp</a></li>
-          <li><a href="http://www.last.fm/user/jave8u">last.fm</a></li>
+          <li><a href="https://www.last.fm/user/jave8u">last.fm</a></li>
           <li><a href="https://getpocket.com/@julianvmodesto">pocket</a></li>
           <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
           <li><a href="mailto:julianvmodesto@gmail.com">email</a></li>
@@ -39,17 +39,11 @@
         width: 100%
       }
 
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font: Georgia, serif;
-      }
-
       main {
         display: flex;
         align-items: center;
         justify-content: center;
+        font: Georgia, serif;
         font-size: 2em;
       }
 
