Set up Google Analytics

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,15 @@
     <meta name="keywords" content="julianvmodesto"/>
     <meta name="robots" content="index, follow"/>
     <meta name="language" content="English"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9Z6ED1Z0G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-W9Z6ED1Z0G');
+    </script>
   </head>
   <body>
     <div id="container">
