--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
             <li><a href="https://www.facebook.com/julianvmodesto">facebook</a></li>
             <li><a href="https://open.spotify.com/user/em37ib">spotify</a></li>
             <li><a href="https://www.yelp.com/user_details?userid=vDedhjOr4XJeVTVZbdy_RQ">yelp</a></li>
-            <li><a href="https://www.last.fm/user/jave8u">last.fm</a></li>
+            <li><a href="https://www.last.fm/user/julianvmodesto">last.fm</a></li>
             <li><a href="https://getpocket.com/@julianvmodesto">pocket</a></li>
             <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
             <li><a href="mailto:julianvmodesto@gmail.com">email</a></li>
