Add /blog and /now

--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,8 @@
             <li><a href="https://www.last.fm/user/julianvmodesto">last.fm</a></li>
             <li><a href="https://getpocket.com/@julianvmodesto">pocket</a></li>
             <li><a href="https://www.goodreads.com/julianvmodesto">goodreads</a></li>
+            <li><a href="https://www.julianvmodesto.com/blog">blog</a></li>
+            <li><a href="https://www.julianvmodesto.com/now">now</a></li>
             <li><a href="mailto:julianvmodesto@gmail.com">email</a></li>
           </ul>
         </section>
