--- a/static/index.html
+++ b/static/index.html
@@ -46,11 +46,11 @@
   </body>
   <footer>
     <style>
-      html,
-      body,
-      #container {
-        height: 100%;
-        width: 100%
+      body {
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        min-height:100vh;
       }
 
       #container,
